# animoji

./: README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/libs/assimp/: build_android.sh  build_android_all.sh  build_android_dae.sh
app/libs/assimp/include/assimp/: quaternion.h
app/libs/eos/: build_android.sh
app/src/androidTest/java/com/github/animoji/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: general.vert  oes.frag  rgba.frag
app/src/main/assets/mask/: scene.gltf
app/src/main/assets/shader/: landmark.frag  landmark.vert  mask.frag  mask.vert  test_landmark.vert
app/src/main/cpp/: jni.cpp  jni_mesh.cpp  jni_mesh.h  jni_vao.cpp  jni_vao.h
app/src/main/cpp/tinygltf/: tiny_gltf.h
app/src/main/java/com/github/animoji/: AnimojiApplication.kt  EntryActivity.kt  MainActivity.kt  PigRender.kt  TestLandmarkActivity.kt  extension.kt  mvp.kt  test.kt
app/src/main/java/com/github/animoji/base/: CameraActivity.kt  EglActivity.kt  FaceDetectorActivity.kt
app/src/main/java/com/github/animoji/egl/: EglCore.java  EglSurfaceBase.java  OffscreenSurface.java  WindowSurface.java
app/src/main/java/com/github/animoji/manager/: PermissionManager.kt  RotationManager.kt
app/src/main/java/com/github/animoji/opengl/: GLFramebuffer.kt  GLProgram.kt  GLRenderBuffer.kt  GLShader.kt  GLVao.kt
app/src/main/res/layout/: activity_entry.xml  activity_main.xml  activity_test_landmark.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/github/animoji/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+1 files in other folders)
